# sparkdesk

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
sparkdesk/: authentication.py  chat.py  chat_utils.py  cli.py  completion.py  consts.py
sparkdesk/async/: chat.py  cli.py  completion.py
tests/: test_api.py
